src/index.css
/* ... */
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position:  ;
  --tw-gradient-via-position:  ;
  --tw-gradient-to-position:  ;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
}
.container {
  width: 100%;
}
.absolute {
  position: absolute;
}
.relative {
  position: relative;
}
.right-0 {
  right: 0px;
}
.top-0 {
  top: 0px;
}
.z-10 {
  z-index: 10;
}
.m-\[1\.38rem\] {
  margin: 1.38rem;
}
.mx-\[0\.38rem\] {
  margin-left: 0.38rem;
  margin-right: 0.38rem;
}
.mx-\[1rem\] {
  margin-left: 1rem;
  margin-right: 1rem;
}
.my-\[1\.38rem\] {
  margin-top: 1.38rem;
  margin-bottom: 1.38rem;
}
.mx-0 {
  margin-left: 0px;
  margin-right: 0px;
}
.-ml-\[140px\] {
  margin-left: -140px;
}
.-mr-\[140px\] {
  margin-right: -140px;
}
.-mr-\[300px\] {
  margin-right: -300px;
}
.mr-\[40px\] {
  margin-right: 40px;
}
.mt-20 {
  margin-top: 5rem;
}
.mt-\[1\.35rem\] {
  margin-top: 1.35rem;
}
.mt-\[12px\] {
  margin-top: 12px;
}
.mt-\[70px\] {
  margin-top: 70px;
}
.mt-\[80px\] {
  margin-top: 80px;
}
.mr-0 {
  margin-right: 0px;
}
.block {
  display: block;
}
.inline-block {
  display: inline-block;
}
.flex {
  display: flex;
}
.hidden {
  display: none;
}
.h-\[2\.75rem\] {
  height: 2.75rem;
}
.h-\[2\.7rem\] {
  height: 2.7rem;
}
.h-\[6\.4375rem\] {
  height: 6.4375rem;
}
.h-\[93px\] {
  height: 93px;
}
.h-fit {
  height: -moz-fit-content;
  height: fit-content;
}
.h-\[91px\] {
  height: 91px;
}
.h-\[50px\] {
  height: 50px;
}
.h-full {
  height: 100%;
}
.min-h-\[75vh\] {
  min-height: 75vh;
}
.w-\[12\.0625rem\] {
  width: 12.0625rem;
}
.w-\[13\.9375rem\] {
  width: 13.9375rem;
}
.w-\[17\.6875rem\] {
  width: 17.6875rem;
}
.w-\[2\.7rem\] {
  width: 2.7rem;
}
.w-full {
  width: 100%;
}
.max-w-\[432px\] {
  max-width: 432px;
}
.max-w-\[525px\] {
  max-width: 525px;
}
.max-w-\[65vw\] {
  max-width: 65vw;
}
.resize {
  resize: both;
}
.flex-col {
  flex-direction: column;
}
.items-center {
  align-items: center;
}
.justify-between {
  justify-content: space-between;
}
.justify-around {
  justify-content: space-around;
}
.gap-\[1rem\] {
  gap: 1rem;
}
.gap-\[2\.31rem\] {
  gap: 2.31rem;
}
.gap-\[30px\] {
  gap: 30px;
}
.gap-\[40px\] {
  gap: 40px;
}
.overflow-hidden {
  overflow: hidden;
}
.rounded-\[16px\] {
  border-radius: 16px;
}
.rounded-\[8px\] {
  border-radius: 8px;
}
.rounded-md {
  border-radius: 0.375rem;
}
.border-2 {
  border-width: 2px;
}
.border-green {
  --tw-border-opacity: 1;
  border-color: rgb(24 129 112 / var(--tw-border-opacity));
}
.border-purple {
  --tw-border-opacity: 1;
  border-color: rgb(129 24 112 / var(--tw-border-opacity));
}
.bg-green {
  --tw-bg-opacity: 1;
  background-color: rgb(24 129 112 / var(--tw-bg-opacity));
}
.bg-off-white {
  --tw-bg-opacity: 1;
  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
}
.bg-transparent {
  background-color: transparent;
}
.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}
.p-\[60px\] {
  padding: 60px;
}
.p-5 {
  padding: 1.25rem;
}
.p-\[1rem\] {
  padding: 1rem;
}
.p-\[\.5rem\] {
  padding: .5rem;
}
.p-\[0\.5rem\] {
  padding: 0.5rem;
}
.px-\[0\.81rem\] {
  padding-left: 0.81rem;
  padding-right: 0.81rem;
}
.px-\[18px\] {
  padding-left: 18px;
  padding-right: 18px;
}
.px-\[45px\] {
  padding-left: 45px;
  padding-right: 45px;
}
.px-\[50px\] {
  padding-left: 50px;
  padding-right: 50px;
}
.px-\[54px\] {
  padding-left: 54px;
  padding-right: 54px;
}
.px-\[60px\] {
  padding-left: 60px;
  padding-right: 60px;
}
.py-10 {
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}
.py-20 {
  padding-top: 5rem;
  padding-bottom: 5rem;
}
.py-\[0\.56rem\] {
  padding-top: 0.56rem;
  padding-bottom: 0.56rem;
}
.py-\[10px\] {
  padding-top: 10px;
  padding-bottom: 10px;
}
.py-\[11px\] {
  padding-top: 11px;
  padding-bottom: 11px;
}
.px-0 {
  padding-left: 0px;
  padding-right: 0px;
}
.py-\[0\.5rem\] {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}
.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}
.px-\[1rem\] {
  padding-left: 1rem;
  padding-right: 1rem;
}
.px-1 {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}
.px-\[2rem\] {
  padding-left: 2rem;
  padding-right: 2rem;
}
.px-\[3rem\] {
  padding-left: 3rem;
  padding-right: 3rem;
}
.pb-20 {
  padding-bottom: 5rem;
}
.pl-\[180px\] {
  padding-left: 180px;
}
.pl-\[30px\] {
  padding-left: 30px;
}
.pl-\[50px\] {
  padding-left: 50px;
}
.pt-40 {
  padding-top: 10rem;
}
.pt-5 {
  padding-top: 1.25rem;
}
.pt-\[30px\] {
  padding-top: 30px;
}
.pr-\[60px\] {
  padding-right: 60px;
}
.pl-\[60px\] {
  padding-left: 60px;
}
.pr-0 {
  padding-right: 0px;
}
.pr-10 {
  padding-right: 2.5rem;
}
.pr-\[0\.5rem\] {
  padding-right: 0.5rem;
}
.pl-\[0\.5rem\] {
  padding-left: 0.5rem;
}
.pl-\[1rem\] {
  padding-left: 1rem;
}
.text-left {
  text-align: left;
}
.text-center {
  text-align: center;
}
.text-end {
  text-align: end;
}
.text-\[0\.625rem\] {
  font-size: 0.625rem;
}
/* ... */

